tests/ui/iterators/iter-macro-not-async-closure-simplified.wide.stderr
error[E0277]: the trait bound `{gen closure@$DIR/iter-macro-not-async-closure-simplified.rs:21:21: 21:28}: AsyncFnOnce()` is not satisfied
  --> $DIR/iter-macro-not-async-closure-simplified.rs:27:21
   |
LL |     call_async_once(f);
   |     --------------- ^ the trait `AsyncFnOnce()` is not implemented for `{gen closure@$DIR/iter-macro-not-async-closure-simplified.rs:21:21: 21:28}`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `call_async_once`
  --> $DIR/iter-macro-not-async-closure-simplified.rs:18:28
   |
LL | fn call_async_once(_: impl AsyncFnOnce()) {}
   |                            ^^^^^^^^^^^^^ required by this bound in `call_async_once`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
